--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-ffmpeg-python>=0.2.0
-pycountry>=19.8.18
-pysubs2>=1.1.0
-setuptools~=49.1.0
-tqdm>=4.51.0
-pandas>=1.1.4
-tqdm
-gevent
-pandas
-colorlog
-numpy
+colorlog==6.8.2
+ffmpeg-python==0.2.0
+numpy==2.0.0
+pandas==2.2.2
+pycountry==24.6.1
+pysubs2==1.7.2
+tqdm==4.66.4
